--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,24 +1,26 @@
-<%- body_class = "app header-fixed" %>
-<%- body_class << " sidebar-fixed sidebar-lg-show" if has_sidebar? %>
-<%- body_class << " aside-menu-fixed" if has_aside? %>
 <% content_for(:body_class, body_class) %>
 <% content_for :content do %>
   <%= render "layouts/application/header" %>
-  <div class="app-body">
-    <%= render_sidebar %>
-    <main class="main">
+  <div class="d-flex position-relative overflow-hidden flex-fill" style="height: calc(100vh - 4rem);">
+    <% if has_sidebar? %>
+      <div class="sidebar sidebar-self-hiding show" id="left_sidebar" data-controller="coreui-sidebar">
+        <%= render_sidebar %>
+        <button class="sidebar-minimizer" type="button"></button>
+      </div>
+    <% end %>
+    <div class="d-flex flex-column flex-fill overflow-auto">
       <div class="main-header-wrapper">
         <%= render_breadcrumbs %>
         <%= render_action_bar %>
         <%= render "layouts/application/notice" %>
       </div>
-      <div class="container-fluid" id="main">
+      <div class="container">
         <%= yield %>
       </div>
-    </main>
+      <%= render "layouts/application/footer" %>
+    </div>
     <%= render_aside %>
   </div>
-  <%= render "layouts/application/footer" %>
 <% end %>
 
 <%= render template: "layouts/base" %>
