--- a/app/views/layouts/application/_notice.html.erb
+++ b/app/views/layouts/application/_notice.html.erb
@@ -1,8 +1,6 @@
 <% flash.each do |k, v| %>
   <div class="alert alert-<%= k %> alert-dismissible fade show">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
+    <button type="button" class="btn-close" data-dismiss="alert" aria-label="Close"></button>
 
     <%= sanitize v.html_safe %>
   </div>
