--- a/app/views/layouts/sidebars/_application.html.erb
+++ b/app/views/layouts/sidebars/_application.html.erb
@@ -1,19 +1,8 @@
-<div class="sidebar" data-controller="coreui-sidebar">
-  <div class="sidebar-header">
-    <%= link_to root_path, class: "nav-link" do %>
-      <i class="fas fa-home"></i>
-      <%= t("layouts.sidebar.application.header") %>
+<ul class="sidebar-nav">
+  <li class="nav-item">
+    <%= link_to root_path, class: nav_active_class("nav-link", "active", controller: 'home') do %>
+      <i class="fas fa-tachometer-alt"></i>
+      <%= t("layouts.sidebar.application.home") %>
     <% end %>
-  </div>
-  <nav class="sidebar-nav">
-    <ul class="nav">
-      <%= nav_item path: 'home#index', html_options: {class: "nav-item"} do %>
-        <%= link_to root_path, class: "nav-link" do %>
-          <i class="fas fa-tachometer-alt"></i>
-          <%= t("layouts.sidebar.application.home") %>
-        <% end %>
-      <% end %>
-    </ul>
-  </nav>
-  <button class="sidebar-minimizer" type="button"></button>
-</div>
+  </li>
+</ul>
