--- a/app/views/layouts/sign_in/_notice.html.erb
+++ b/app/views/layouts/sign_in/_notice.html.erb
@@ -3,9 +3,7 @@
     <div class="col-md-6">
       <div class="alert alert-<%= k %> alert-dismissible fade show mx-4">
         <div class="container">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+          <button type="button" class="btn-close" data-dismiss="alert" aria-label="Close"></button>
 
           <%= sanitize v.html_safe %>
         </div>
