--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -14,25 +14,27 @@
 
       <div class="card-body p-4">
         <%= form_with(model: resource, as: resource_name, url: registration_path(resource_name), local: true) do |f| %>
-          <div class="form-group">
-            <%= f.label :email %>
+          <div>
+            <%= f.label :email, class: "form-label" %>
             <%= f.email_field :email, id: "user_email", autocomplete: "username", autofocus: true, required: "required", class: "form-control", class_for_error: "is-invalid" %>
             <%= f.error_message :email, class: "invalid-feedback" %>
           </div>
 
-          <div class="form-group">
-            <%= f.label :password %>
+          <div class="mt-3">
+            <%= f.label :password, class: "form-label" %>
             <%= f.password_field :password, id: "user_password", autocomplete: "new-password", required: "required", class: "form-control", class_for_error: "is-invalid" %>
             <%= f.error_message :password, class: "invalid-feedback" %>
           </div>
 
-          <div class="form-group">
-            <%= f.label :password_confirmation %>
+          <div class="mt-3">
+            <%= f.label :password_confirmation, class: "form-label" %>
             <%= f.password_field :password_confirmation, id: "user_password_confirmation", autocomplete: "new-password", required: "required", class: "form-control", class_for_error: "is-invalid" %>
             <%= f.error_message :password_confirmation, class: "invalid-feedback" %>
           </div>
 
-          <%= f.submit t(".submit"), class: "btn btn-block btn-primary" %>
+          <div class="mt-3">
+            <%= f.submit t(".submit"), class: "btn btn-block btn-primary" %>
+          </div>
         <% end %>
       </div>
     </div>
@@ -40,7 +42,7 @@
 </div>
 
 <%- if devise_mapping.confirmable? %>
-  <div class="block text-center">
+  <div class="block text-center mt-3">
     <%= link_to t(".didn_t_receive_confirmation_instructions"), new_confirmation_path(resource_name) %>
   </div>
 <% end -%>
