--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1413,7 +1413,8 @@ $alert-variants: (
   "info": alert-color-map($info),
   "light": alert-color-map($light),
   "dark": alert-color-map($dark),
-  "alert": alert-color-map($info)
+  "alert": alert-color-map($info),
+  "notice": alert-color-map($info)
 );
 // scss-docs-end alert-variables
 
