--- a/app/views/layouts/sign_in/_notice.html.erb
+++ b/app/views/layouts/sign_in/_notice.html.erb
@@ -1,12 +1,11 @@
 <% flash.each do |k, v| %>
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <div class="alert alert-<%= k %> alert-dismissible fade show mx-4">
+      <div class="alert alert-<%= k %> alert-dismissible fade show mx-4" role="alert">
         <div class="container">
-          <button type="button" class="btn-close" data-dismiss="alert" aria-label="Close"></button>
-
           <%= sanitize v.html_safe %>
         </div>
+        <button type="button" class="btn-close" data-coreui-dismiss="alert" aria-label="Close"></button>
       </div>
     </div>
   </div>
