--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 @import "@coreui/coreui/scss/functions";
 
 // Variables
@@ -311,8 +312,8 @@ $gradient: linear-gradient(180deg, rgba($white, .15), rgba($white, 0));
 $spacer: 1rem;
 $spacers: (
   0: 0,
-  1: $spacer / 4,
-  2: $spacer / 2,
+  1: math.div($spacer, 4),
+  2: math.div($spacer, 2),
   3: $spacer,
   4: $spacer * 1.5,
   5: $spacer * 3,
@@ -411,7 +412,7 @@ $gutters: $spacers;
 
 // Container padding
 
-$container-padding-x: $grid-gutter-width / 2;
+$container-padding-x: math.div($grid-gutter-width, 2);
 
 
 // Components
@@ -524,7 +525,7 @@ $font-sizes: (
 // scss-docs-end font-sizes
 
 // scss-docs-start headings-variables
-$headings-margin-bottom:      $spacer / 2;
+$headings-margin-bottom:      math.div($spacer, 2);
 $headings-font-family:        null;
 $headings-font-style:         null;
 $headings-font-weight:        500;
@@ -819,7 +820,7 @@ $input-height-border:                   $input-border-width * 2;
 
 $input-height-inner:                    add($input-line-height * 1em, $input-padding-y * 2);
 $input-height-inner-half:               add($input-line-height * .5em, $input-padding-y);
-$input-height-inner-quarter:            add($input-line-height * .25em, $input-padding-y / 2);
+$input-height-inner-quarter:            add($input-line-height * .25em, math.div($input-padding-y, 2));
 
 $input-height:                          add($input-line-height * 1em, add($input-padding-y * 2, $input-height-border, false));
 $input-height-sm:                       add($input-line-height * 1em, add($input-padding-y-sm * 2, $input-height-border, false));
@@ -1054,7 +1055,7 @@ $nav-pills-link-active-bg:          $component-active-bg;
 // Navbar
 
 // scss-docs-start navbar-variables
-$navbar-padding-y:                  $spacer / 2;
+$navbar-padding-y:                  math.div($spacer, 2);
 $navbar-padding-x:                  null;
 
 $navbar-nav-link-padding-x:         .5rem;
@@ -1063,7 +1064,7 @@ $navbar-brand-font-size:            $font-size-lg;
 // Compute the navbar-brand padding-y so the navbar-brand will have the same height as navbar-text and nav-link
 $nav-link-height:                   $font-size-base * $line-height-base + $nav-link-padding-y * 2;
 $navbar-brand-height:               $navbar-brand-font-size * $line-height-base;
-$navbar-brand-padding-y:            ($nav-link-height - $navbar-brand-height) / 2;
+$navbar-brand-padding-y:            math.div($nav-link-height - $navbar-brand-height, 2);
 $navbar-brand-margin-end:           1rem;
 
 $navbar-toggler-padding-y:          .25rem;
@@ -1112,7 +1113,7 @@ $dropdown-border-radius:            $border-radius;
 $dropdown-border-width:             $border-width;
 $dropdown-inner-border-radius:      subtract($dropdown-border-radius, $dropdown-border-width);
 $dropdown-divider-bg:               $dropdown-border-color;
-$dropdown-divider-margin-y:         $spacer / 2;
+$dropdown-divider-margin-y:         math.div($spacer, 2);
 $dropdown-box-shadow:               $box-shadow;
 
 $dropdown-link-color:               $gray-900;
@@ -1124,7 +1125,7 @@ $dropdown-link-active-bg:           $component-active-bg;
 
 $dropdown-link-disabled-color:      $gray-500;
 
-$dropdown-item-padding-y:           $spacer / 4;
+$dropdown-item-padding-y:           math.div($spacer, 4);
 $dropdown-item-padding-x:           $spacer;
 
 $dropdown-header-color:             $gray-600;
@@ -1193,12 +1194,12 @@ $pagination-border-radius-lg:       $border-radius-lg;
 // scss-docs-start card-variables
 $card-spacer-y:                     $spacer;
 $card-spacer-x:                     $spacer;
-$card-title-spacer-y:               $spacer / 2;
+$card-title-spacer-y:               math.div($spacer, 2);
 $card-border-width:                 $border-width;
 $card-border-radius:                $border-radius;
 $card-border-color:                 rgba($black, .125);
 $card-inner-border-radius:          subtract($card-border-radius, $card-border-width);
-$card-cap-padding-y:                $card-spacer-y / 2;
+$card-cap-padding-y:                math.div($card-spacer-y, 2);
 $card-cap-padding-x:                $card-spacer-x;
 $card-cap-bg:                       rgba($black, .03);
 $card-cap-color:                    unset;
@@ -1206,7 +1207,7 @@ $card-height:                       null;
 $card-color:                        unset;
 $card-bg:                           $white;
 $card-img-overlay-padding:          $spacer;
-$card-group-margin:                 $grid-gutter-width / 2;
+$card-group-margin:                 math.div($grid-gutter-width, 2);
 // scss-docs-end card-variables
 
 // Accordion
@@ -1253,8 +1254,8 @@ $tooltip-color:                     $high-emphasis-inverse;
 $tooltip-bg:                        $black;
 $tooltip-border-radius:             $border-radius;
 $tooltip-opacity:                   .9;
-$tooltip-padding-y:                 $spacer / 4;
-$tooltip-padding-x:                 $spacer / 2;
+$tooltip-padding-y:                 math.div($spacer, 4);
+$tooltip-padding-x:                 math.div($spacer, 2);
 $tooltip-margin:                    0;
 
 $tooltip-arrow-width:               .8rem;
@@ -1470,7 +1471,7 @@ $list-group-border-color:           rgba($black, .125);
 $list-group-border-width:           $border-width;
 $list-group-border-radius:          $border-radius;
 
-$list-group-item-padding-y:         $spacer / 2;
+$list-group-item-padding-y:         math.div($spacer, 2);
 $list-group-item-padding-x:         $spacer;
 $list-group-item-bg-scale:          -80%;
 $list-group-item-color-scale:       40%;
@@ -1506,8 +1507,8 @@ $list-group-variants: (
 // Header
 // scss-docs-start header-variables
 $header-min-height:             4rem;
-$header-padding-y:              $spacer / 2;
-$header-padding-x:              $spacer / 2;
+$header-padding-y:              math.div($spacer, 2);
+$header-padding-x:              math.div($spacer, 2);
 $header-brand-font-size:        $font-size-lg;
 $header-color:                  $medium-emphasis;
 $header-bg:                     $white;
@@ -1520,7 +1521,7 @@ $header-disabled-color:         $disabled;
 // Compute the header-brand padding-y so the header-brand will have the same height as header-text and nav-link
 $nav-link-height:               $font-size-base * $line-height-base + $nav-link-padding-y * 2;
 $header-brand-height:           $header-brand-font-size * $line-height-base;
-$header-brand-padding-y:        ($nav-link-height - $header-brand-height) / 2;
+$header-brand-padding-y:        math.div($nav-link-height - $header-brand-height, 2);
 $header-brand-margin-end:       1rem;
 $header-brand-font-size:        $font-size-lg;
 $header-brand-color:            $gray-900;
@@ -1546,7 +1547,7 @@ $header-divider-border-color:   $header-border-color;
 // Subheader
 // scss-docs-start subheader-variables
 $subheader-min-height:           3rem;
-$subheader-padding-y:            $spacer / 2;
+$subheader-padding-y:            math.div($spacer, 2);
 $subheader-padding-x:            $spacer;
 $subheader-border-color:         $border-color;
 $subheader-border-width:         1px;
@@ -1726,7 +1727,7 @@ $sidebar-toggler-hover-indicator-icon:     url("data:image/svg+xml;charset=utf8,
 // Footer
 // scss-docs-start footer-variables
 $footer-min-height:    3rem;
-$footer-padding-y:     $spacer / 2;
+$footer-padding-y:     math.div($spacer, 2);
 $footer-padding-x:     $spacer;
 $footer-bg:            $gray-100;
 $footer-color:         $body-color;
